force-app/main/default/objects/Selection__c/Selection__c.object-meta.xml
<CustomObject>
    <description>Represents a player&apos;s selection for a given game</description>
    <label>Selection</label>
    <nameField>
        <displayFormat>SEL-{00000}</displayFormat>
        <label>Selection Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>