force-app/main/default/objects/Selection__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <description>The selected game</description>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Selections</relationshipLabel>
    <relationshipName>Selections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>