force-app/main/default/objects/Selection__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <description>The player that made this selection</description>
    <inlineHelpText>The player that made this selection</inlineHelpText>
    <label>Player</label>
    <referenceTo>Player__c</referenceTo>
    <relationshipLabel>Selections</relationshipLabel>
    <relationshipName>Selections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>