force-app/main/default/objects/Selection__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <description>1 if selected game is a winner, 0.5 if it is a push, otherwise 0.</description>
    <formula>IF ( Game__r.Final__c, 
  IF (Game__r.Winner__c = Team__r.Name , 1, 
    IF ( Game__r.Winner__c = &apos;PUSH&apos;, 0.5, 0)) , 0)</formula>
    <label>Points</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>