force-app/main/default/objects/Selection__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The selected team</description>
    <label>Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Selections</relationshipLabel>
    <relationshipName>Selections</relationshipName>
    <type>Lookup</type>
</CustomField>